# OpenQmt

./: .env.example  .gitignore  .npmrc  AGENTS.md  README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
docs/: index.md  todo.txt
docs/.vitepress/: config.ts
docs/community/: community.md
docs/guide/: ai.md  download.md  features.md  fund.md  getting-started.md  gold.md  introduction.md  learn.md  settings.md  stock.md
docs/public/: notes.json  update.json
scripts/: zip.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
src-tauri/src/comds/: invoke.rs
src-tauri/src/utils/: init.rs
src/api/: eastmoney.ts  market.ts
src/components/: AboutDialog.vue  AiAssistantOverlay.vue  AuthDialog.vue  PageToolbar.vue  PriceCard.vue  SettingsDialog.vue  UpNotes.vue
src/composables/: useAiModelSelection.ts  usePageContext.ts
src/data/: sectorDetailMock.ts  stockDetailMock.ts
src/pages/: AIPage.vue  FeatureControlPage.vue  FundDetailPage.vue  FundPage.vue  GoldPage.vue  LearnPage.vue  NotificationsPage.vue  ProfilePage.vue  SectorDetailPage.vue  SettingsPage.vue  StockDetailPage.vue  StockInfoPage.vue  StockPage.vue
src/router/: index.ts
src/stores/: ai.ts  auth.ts  fund.ts  fundDetail.ts  gold.ts  learn.ts  notifications.ts  settings.ts  stock.ts  theme.ts  upNotes.ts
src/styles/: global.css
src/types/: index.ts
(+9 files in other folders)
